now twitter works

--- a/Next/appsettings.json
+++ b/Next/appsettings.json
@@ -1,4 +1,11 @@
 {
+    "Twitter":  {
+        "url": "https://api.twitter.com/1.1/search/tweets.json?q=linux",
+        "consumer_key": "XHygzkVVK7rjSJbLXkkJ7OtMA",
+        "consumer_secret": "xnAaQE8sdnwwkBr8kcU0BeX0MG2lZQC0TwBMHomdVjXDnOZs9d",
+        "access_token": "1159469034477367298-8p4cj1tBCSKopImgRpnDvl7ijb8f2K",
+        "token_secret": "Rf3bsvywgNahu00GmV1acFwzkLll2s92iVX6ODIxL9CIs"
+    },
     "ConnectionStrings": {
         "DefaultConnection": "Data Source=./my.db;"
     },
